fix(consultant languages): fixed ios issue with message input overlapping languages

--- a/src/components/enquiry/enquiry.styles.scss
+++ b/src/components/enquiry/enquiry.styles.scss
@@ -62,7 +62,7 @@ $backgroundCircleSize: 1800px;
 	}
 
 	&__contentWrapper {
-		padding: $grid-base-six $grid-base-two $grid-base-six;
+		padding: $grid-base-six $grid-base-two $grid-base-twelve;
 		overflow: auto;
 		margin-top: $header-height;
 		margin-bottom: $message-wrapper-height;
